--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@types/react-redux": "^7.1.24",
+    "@types/uuid": "^9.0.0",
     "json-server": "^0.17.1"
   }
 }
