--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/lodash": "^4.14.191",
     "@types/react-redux": "^7.1.24",
     "@types/uuid": "^9.0.0",
     "json-server": "^0.17.1"
