Created controller for React app

--- a/swizleApi/src/main/resources/application.properties
+++ b/swizleApi/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
