Fixed typo, refreshed icons and implemented loading screen on logout.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swizzle_application",
+  "name": "swizle_application",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
