--- a/swizleApi/src/main/resources/application.properties
+++ b/swizleApi/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
