--- a/swizleApi/pom.xml
+++ b/swizleApi/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
