Scaffolded main loop for automatic lectures swapping

--- a/swizleApi/src/main/resources/application.properties
+++ b/swizleApi/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=bkisly
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
